# steam-cli-lib-fetcher

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
docs/: LAPORAN.md  README.md
include/steam/: api_key.hpp  base.hpp  data.hpp  graph.hpp  handler.hpp  loader.hpp  prefix.hpp  process.hpp  steam.hpp  undo.hpp  utility.hpp
src/: SLF-Main.cpp  SLF.cpp  main.cpp  slf.cpp
src/include/: SLF.hpp  slf.hpp
src/steam/: api_key.cpp  graph.cpp  handler.cpp  loader.cpp  prefix.cpp  process.cpp  steam.cpp  undo.cpp  utility.cpp
